# fixit-odoo

./: .fixit.yml  README.rst  __manifest__.py  pyproject.toml
odoo_rules/: __init__.py  no_installable_true_rule.py  odoo_rules.py  prefer_env_translation.py
